syntax = "proto3";
package fileSync;

option java_package = "com.tiny.fileSync";

///////////////////////
//proto for file sync
///////////////////////

//message for file sync request
message FileSyncReq {
    string subDir = 1;
    string fileName = 2;
    int64 fileSize = 3;
    bytes fileContent = 4;
}

//message for file remove request
message FileRemoveReq {
    string subDir = 1;
    string fileName = 2;
}

//message for sync response
message SyncResp {
  bool success = 1;
}

///////////////////////
//proto for dir sync
///////////////////////

//message for dir sync request
message DirSyncReq {
    string subDir = 1;
    string newSubDir = 2;//used for rename
    bool isRemove = 3;
}

//define service
service FileSyncService {
    //file remove
    rpc FileRemove(FileRemoveReq) returns (SyncResp);

    //file sync
    rpc FileSync(FileSyncReq) returns (SyncResp);

    //dir sync
    rpc DirSync(DirSyncReq) returns(SyncResp);
}

